이미지 경로 코드 삭제