@@ -27,7 +27,7 @@ public class EventScraper {
 
       Document doc = Jsoup.connect(WEVITY_URL)
           .userAgent(
-              "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36")
+              "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko)")
           .get();
 
       Elements items = doc.select(".list li");
@@ -43,25 +43,24 @@ public class EventScraper {
           "<link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css' rel='stylesheet'>");
       html.append("<style>");
       html.append(
-          "body{background:#f8f9fa; padding-top:30px; font-family:'Pretendard', sans-serif;}");
+          "body{background:#f4f7f9; padding-top:40px; font-family:'Pretendard', sans-serif;}");
       html.append(
-          ".contest-card{background:white; border-radius:15px; overflow:hidden; margin-bottom:20px; box-shadow:0 4px 6px rgba(0,0,0,0.05); transition:0.3s; height: 100%; display: flex; flex-direction: column;}");
+          ".contest-card{background:white; border-radius:12px; border:1px solid #e1e4e8; padding:24px; margin-bottom:20px; transition:0.2s; height: 100%;}");
       html.append(
-          ".contest-card:hover{transform:translateY(-5px); box-shadow:0 8px 15px rgba(0,0,0,0.1);}");
+          ".contest-card:hover{transform:translateY(-3px); box-shadow:0 8px 16px rgba(0,0,0,0.08); border-color:#0d6efd;}");
       html.append(
-          ".img-container{width:100%; height:200px; overflow:hidden; background:#dee2e6; display: flex; align-items: center; justify-content: center;}");
-      html.append(
-          ".img-container img{width:100%; height:100%; object-fit: contain; padding: 10px;}");
-      html.append(".card-body{padding:20px; flex-grow: 1;}");
-      html.append(
-          ".badge-date{background:#0d6efd; color:white; padding:4px 12px; border-radius:20px; font-size:0.8rem; font-weight:bold;}");
-      html.append("h1{font-weight:800; text-align:center; margin-bottom:30px; color: #212529;}");
-      html.append(".search-box{max-width:500px; margin: 0 auto 40px;}");
+          ".badge-date{background:#0d6efd; color:white; padding:5px 14px; border-radius:30px; font-size:0.85rem; font-weight:700; display:inline-block; margin-bottom:15px;}");
+      html.append("h1{font-weight:800; text-align:center; margin-bottom:10px; color:#1a1a1a;}");
+      html.append(".sub-title{text-align:center; color:#666; margin-bottom:40px;}");
+      html.append(".search-box{max-width:600px; margin: 0 auto 50px;}");
+      html.append(".organ-name{color:#555; font-size:0.95rem; margin-bottom:20px;}");
       html.append("</style></head><body><div class='container'>");
 
-      html.append("<h1>공모전</h1>");
+      html.append("<h1> 공모전 </h1>");
+      html.append("<p class='sub-title'>최신 공모전 정보를 한눈에 확인하세요</p>");
+
       html.append(
-          "<div class='search-box'><input type='text' id='searchInput' class='form-control form-control-lg shadow-sm' placeholder='공모전 제목이나 주최측 검색...'></div>");
+          "<div class='search-box'><input type='text' id='searchInput' class='form-control form-control-lg shadow-sm' placeholder='공모전 검색></div>");
       html.append("<div class='row' id='contestList'>");
 
       int newCount = 0;
@@ -77,36 +76,26 @@ public class EventScraper {
         String day = item.select(".day").text();
         String link = "https://www.wevity.com/" + el.attr("href");
 
-        Element imgEl = item.selectFirst("img");
-        String imgUrl = "https://via.placeholder.com/300x200?text=No+Image";
-        if (imgEl != null) {
-          String src = imgEl.attr("src");
-          if (!src.isEmpty()) {
-            imgUrl = src.startsWith("http") ? src : "https://www.wevity.com" + src;
-          }
-        }
-
         html.append("<div class='col-md-6 col-lg-4 mb-4 contest-item'>");
         html.append("<div class='contest-card'>");
-        html.append("<div class='img-container'><img src='").append(imgUrl).append(
-            "' onerror=\"this.src='https://via.placeholder.com/300x200?text=Poster'\" alt='공모전 포스터'></div>");
-        html.append("<div class='card-body'>");
         html.append("<span class='badge-date'>").append(day).append("</span>");
-        html.append("<h5 class='mt-3 mb-2 fw-bold text-truncate' title='").append(title)
-            .append("'>").append(title).append("</h5>");
-        html.append("<p class='text-muted small mb-3'> 주최: ").append(organ).append("</p>");
+        html.append(
+                "<h5 class='fw-bold mb-3' style='line-height:1.5; height:3rem; overflow:hidden;'>")
+            .append(title).append("</h5>");
+        html.append("<p class='organ-name'> ").append(organ).append("</p>");
         html.append("<a href='").append(link)
-            .append("' target='_blank' class='btn btn-outline-primary btn-sm w-100'>상세보기 →</a>");
-        html.append("</div></div></div>");
+            .append("' target='_blank' class='btn btn-primary w-100 fw-bold'>상세 정보 보기</a>");
+        html.append("</div></div>");
 
         if (sent.add(title)) {
           sendDiscordAlert(DISCORD_WEBHOOK_URL,
-              "공모전\n 제목: " + title + "\n 주최: " + organ + "\n 마감: " + day + "\n 링크: " + link);
+              "공모전\n " + title + "\n 주최: " + organ + "\n 마감: " + day + "\n " + link);
           newCount++;
         }
       }
 
       html.append("</div>");
+
       html.append("<script>");
       html.append("document.getElementById('searchInput').addEventListener('keyup', function() {");
       html.append("  let val = this.value.toLowerCase();");
@@ -118,13 +107,13 @@ public class EventScraper {
       html.append("</script>");
 
       String time = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
-      html.append("<footer class='text-center mt-5 mb-5 text-muted'><small>마지막 동기화: ").append(time)
-          .append("</small></footer></div></body></html>");
+      html.append("<footer class='text-center mt-5 mb-5 text-muted'><hr><small>최종 업데이트: ")
+          .append(time).append("</small></footer></div></body></html>");
 
       Files.write(Paths.get(SENT_FILE), new ArrayList<>(sent));
-      Files.writeString(Paths.get("index.html"), html.toString());
+      Files.write(Paths.get("index.html"), html.toString().getBytes(StandardCharsets.UTF_8));
 
-      System.out.println("완료! 새 알림: " + newCount + "건");
+      System.out.println("웹 페이지 갱신 완료 (이미지 제외 버전)");
     } catch (Exception e) {
       e.printStackTrace();
     }
